Bug 1438996. Don't construct a unneeded temporary range object in RangeUtils::CompareNodeToRange. r=masayuki

nsContentUtils::ComparePoints just immediately deconstructs the range boundary into container and offset and calls a version of nsContentUtils::ComparePoints that takes containers/offsets instead of range boundaries.

This also avoids a warning in the RangeBoundary constructor.

Differential Revision: https://phabricator.services.mozilla.com/D42071

--HG--
extra : moz-landing-system : lando